@@ -13,7 +13,6 @@ package com.intuit.tank.harness;
  * #L%
  */
 
-import com.google.common.collect.ImmutableMap;
 import com.intuit.tank.vm.api.enumerated.IncrementStrategy;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -21,6 +20,8 @@ import org.apache.logging.log4j.Logger;
 import com.intuit.tank.logging.LoggingProfile;
 import com.intuit.tank.vm.common.TankConstants;
 import org.apache.logging.log4j.message.ObjectMessage;
+
+import java.util.Map;
 
 public class AgentRunData {
     private static final Logger LOG = LogManager.getLogger(AgentRunData.class);
@@ -311,7 +312,7 @@ public class AgentRunData {
      *            the stopBehavior to set
      */
     public void setStopBehavior(StopBehavior stopBehavior) {
-        LOG.info(new ObjectMessage(ImmutableMap.of("Message", "Setting stopBehavior to " + stopBehavior)));
+        LOG.info(new ObjectMessage(Map.of("Message", "Setting stopBehavior to " + stopBehavior)));
         this.stopBehavior = stopBehavior;
     }
 
